--- a/redis/docker-compose.yml
+++ b/redis/docker-compose.yml
@@ -1,10 +1,11 @@
 services:
   redis:
-    image: redis:6.2-alpine
+    image: redis:8.2-alpine
     container_name: redis
     ports:
       - '${DEVBOX_PORT_PREFIX}6379:6379'
-    command: redis-server --save 20 1 --loglevel warning --requirepass ${REDIS_PASSWORD}
+    #  --loglevel warning --requirepass ${REDIS_PASSWORD}
+    command: redis-server --save 20 1
     volumes: 
       - redis-data:/data
     restart: unless-stopped
