--- a/redis/docker-compose.yml
+++ b/redis/docker-compose.yml
@@ -4,8 +4,7 @@ services:
     container_name: redis
     ports:
       - '${DEVBOX_PORT_PREFIX}6379:6379'
-    #  --loglevel warning --requirepass ${REDIS_PASSWORD}
-    command: redis-server --save 20 1
+    command: redis-server --save 20 1 --loglevel warning --requirepass ${REDIS_PASSWORD}
     volumes: 
       - redis-data:/data
     restart: unless-stopped
