--- a/traefik/helm/kind/values.yml
+++ b/traefik/helm/kind/values.yml
@@ -1,8 +1,6 @@
 # adapted from https://blue42.net/devops/2021/k8s-kind-traefik/
 
-globalArguments:
-  - "--global.checknewversion"
-  - "--global.sendanonymoususage"
+additionalArguments:
   # added for kubernetes dashboard
   - "--serversTransport.insecureSkipVerify=true"
 
